--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_success.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_success.vm
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>幼富通 - 开通结果</title>
-    $(function(){
-    	$('.nav a:eq(1)').addClass('active');
-    })
-    
+    <script>
+	    $(function(){
+	    	$('.nav a:eq(1)').addClass('active');
+	    })
+    </script>
 </head>
 <body>
     <div class="body">
